src/test/compile-fail/dup-link-name.rs
// error-pattern:duplicate meta item `name`

#[link(name = "test", name)];

fn main() { }